# rp2040-freertos-template

src/: CMakeLists.txt  buzzer_pwm.c  buzzer_pwm.h  lcd.c  lcd.h  led_green&red.c  led_green&red.h  main.c  pressure_sensor&temp.c  pressure_sensor&temp.h  vibarator_sensor.c  vibarator_sensor.h
